Add version in client side

--- a/MadWorld/MadWorld.Website/wwwroot/appsettings.Development.json
+++ b/MadWorld/MadWorld.Website/wwwroot/appsettings.Development.json
@@ -3,6 +3,7 @@
     "InstrumentationKey": "49d6828c-87f7-4dff-8c0b-d7a79006be77"
   },
   "ApiUrl": "https://localhost:59761/",
+  "ApiVersion": "1.0",
   "AzureAdB2C": {
     "Authority": "https://nlMadWorld.b2clogin.com/nlMadWorld.onmicrosoft.com/B2C_1_Sign_In_Up_Policy",
     "ClientId": "90cc965e-9459-478a-8de5-5c9f58691946",
