--- a/MadWorld/MadWorld.Website/wwwroot/appsettings.json
+++ b/MadWorld/MadWorld.Website/wwwroot/appsettings.json
@@ -3,6 +3,7 @@
     "InstrumentationKey": "0a5c1e6c-0422-4f63-955d-0b60b2e5477d"
   },
   "ApiUrl": "https://api.mad-world.nl/",
+  "ApiVersion": "1.0",
   "AzureAdB2C": {
     "Authority": "https://nlMadWorld.b2clogin.com/nlMadWorld.onmicrosoft.com/B2C_1_Sign_In_Up_Policy",
     "ClientId": "90cc965e-9459-478a-8de5-5c9f58691946",
