--- a/MadWorld/MadWorld.DataLayer/MadWorld.DataLayer.csproj
+++ b/MadWorld/MadWorld.DataLayer/MadWorld.DataLayer.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <ProjectReference Include="..\MadWorld.Shared\MadWorld.Shared.csproj" />
     <ProjectReference Include="..\MadWorld.CustomPackages\MadWorld.Optional\MadWorld.Optional.csproj" />
+    <ProjectReference Include="..\MadWorld.CustomPackages\MadWorld.Guardian\MadWorld.Guardian.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.1" />
