--- a/MadWorld/MadWorld.Console/MadWorld.Console.csproj
+++ b/MadWorld/MadWorld.Console/MadWorld.Console.csproj
@@ -16,6 +16,7 @@
     <None Remove="Insight\Models\" />
     <None Remove="Insight\Interfaces\" />
     <None Remove="GuardFolder\" />
+    <None Remove="Operator\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.ApplicationInsights.Query" Version="1.0.0" />
@@ -25,6 +26,7 @@
     <Folder Include="Insight\Models\" />
     <Folder Include="Insight\Interfaces\" />
     <Folder Include="GuardFolder\" />
+    <Folder Include="Operator\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MadWorld.CustomPackages\MadWorld.Optional\MadWorld.Optional.csproj" />
