--- a/MadWorld/MadWorld.Website/MadWorld.Website.csproj
+++ b/MadWorld/MadWorld.Website/MadWorld.Website.csproj
@@ -77,6 +77,15 @@
     <Content Remove="wwwroot\js\extern\smartlook.js" />
     <Content Remove="wwwroot\js\base\application-html.js" />
     <Content Remove="wwwroot\js\base\application-html.js.map" />
+    <Content Remove="wwwroot\js\intern\audioplayer.js.map" />
+    <Content Remove="wwwroot\js\intern\audioplayer.js" />
+    <Content Remove="wwwroot\js\intern\audioplayer-def.js" />
+    <Content Remove="wwwroot\js\base\application-html.js.map" />
+    <Content Remove="wwwroot\js\base\application-html.js" />
+    <Content Remove="wwwroot\js\extern\smartlook.js.map" />
+    <Content Remove="wwwroot\js\extern\smartlook.js" />
+    <Content Remove="wwwroot\js\base\application-html-def.js" />
+    <Content Remove="wwwroot\js\extern\smartlook-def.js" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="wwwroot\images\" />
