Add running manager

--- a/MadWorld/MadWorld.Shared/MadWorld.Shared.csproj
+++ b/MadWorld/MadWorld.Shared/MadWorld.Shared.csproj
@@ -18,6 +18,7 @@
     <None Remove="Models\IPFS\" />
     <None Remove="Models\Admin\IPFS\" />
     <None Remove="Creators\" />
+    <None Remove="DesignPattern\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Helper\" />
@@ -31,5 +32,6 @@
     <Folder Include="Models\IPFS\" />
     <Folder Include="Models\Admin\IPFS\" />
     <Folder Include="Creators\" />
+    <Folder Include="DesignPattern\" />
   </ItemGroup>
 </Project>
