--- a/MadWorld/MadWorld.Website/staticwebapp.config.json
+++ b/MadWorld/MadWorld.Website/staticwebapp.config.json
@@ -1,6 +1,6 @@
 ﻿{
   "globalHeaders": {
-    "content-security-policy": "default-src 'self' https://api.mad-world.nl; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://js.monitor.azure.com https://dc.services.visualstudio.com https://rec.smartlook.com; upgrade-insecure-requests; frame-ancestors 'self'",
+    "content-security-policy": "default-src 'self' https://api.mad-world.nl; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://js.monitor.azure.com https://dc.services.visualstudio.com https://rec.smartlook.com; connect-src 'self' wws://api.mad-world.nl https://dc.services.visualstudio.com https://manager.eu.smartlook.cloud; upgrade-insecure-requests; frame-ancestors 'self'",
     "X-Frame-Options": "SAMEORIGIN",
     "X-Permitted-Cross-Domain-Policies": "none",
     "Referrer-Policy": "same-origin",
