--- a/MadWorld/MadWorld.Website/staticwebapp.config.json
+++ b/MadWorld/MadWorld.Website/staticwebapp.config.json
@@ -9,7 +9,7 @@
     "Referrer-Policy": "same-origin",
     "X-Content-Type-Options": "nosniff",
     "x-xss-protection": "1; mode=block",
-    "Permissions-Policy": ""
+    "Permissions-Policy": "accelerometer=(), ambient-light-sensor=(), autoplay=(), battery=(), camera=(), cross-origin-isolated=(), display-capture=(), document-domain=(), encrypted-media=(), execution-while-not-rendered=(), execution-while-out-of-viewport=(), fullscreen=(), geolocation=(), gyroscope=(), keyboard-map=(), magnetometer=(), microphone=(), midi=(), navigation-override=(), payment=(), picture-in-picture=(), publickey-credentials-get=(), screen-wake-lock=(), sync-xhr=(), usb=(), web-share=(), xr-spatial-tracking=(), clipboard-read=(), clipboard-write=(), gamepad=(), speaker-selection=(), conversion-measurement=(), focus-without-user-activation=(), hid=(), idle-detection=(), interest-cohort=(), serial=(), sync-script=(), trust-token-redemption=(), window-placement=(), vertical-scroll=()"
   },
   "navigationFallback": {
     "rewrite": "/index.html"
