--- a/MadWorld/MadWorld.Website/staticwebapp.config.json
+++ b/MadWorld/MadWorld.Website/staticwebapp.config.json
@@ -2,7 +2,7 @@
   "globalHeaders": {
     "Access-Control-Allow-Origin": "*",
     "Access-Control-Allow-Methods": "GET,PUT,POST,DELETE,OPTIONS",
-    "Access-Control-Allow-Headers": "Content-Type,x-ntoastnotify-request-type",
+    "Access-Control-Allow-Headers": "Content-Type,x-ntoastnotify-request-type, Request-Id, Request-Context",
     "content-security-policy": "default-src 'self' https://api.mad-world.nl; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://js.monitor.azure.com https://dc.services.visualstudio.com https://rec.smartlook.com; connect-src 'self' wss://api.mad-world.nl https://api.mad-world.nl https://dc.services.visualstudio.com https://manager.eu.smartlook.cloud; upgrade-insecure-requests; frame-ancestors 'self'",
     "X-Frame-Options": "SAMEORIGIN",
     "X-Permitted-Cross-Domain-Policies": "none",
