--- a/MadWorld/MadWorld.Website/MadWorld.Website.csproj
+++ b/MadWorld/MadWorld.Website/MadWorld.Website.csproj
@@ -107,6 +107,7 @@
     <Folder Include="Manager\Interfaces\" />
     <Folder Include="Models\Tools\Running\" />
     <Folder Include="Pages\Base\" />
+    <Folder Include="wwwroot\js\packages\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\MadWorld.Shared\MadWorld.Shared.csproj">
@@ -115,5 +116,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="wwwroot\typescript\extern\smartlook.ts" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Remove="wwwroot\js\packages\" />
   </ItemGroup>
 </Project>
