--- a/MadWorld/MadWorld.Mobile/MadWorld.Mobile/MadWorld.Mobile.csproj
+++ b/MadWorld/MadWorld.Mobile/MadWorld.Mobile/MadWorld.Mobile.csproj
@@ -15,5 +15,14 @@
     <PackageReference Include="Xamarin.Forms" Version="4.8.0.1451" />
     <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="Microsoft.MobileBlazorBindings" Version="0.5.50-preview" />
+    <PackageReference Include="MadWorld.Shared.Client" Version="1.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\MadWorld.Shared.Client\MadWorld.Shared.Client.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Remove="MadWorld.Shared.Client" />
   </ItemGroup>
 </Project>
