--- a/MadWorld/MadWorld.Tests/MadWorld.Tests.csproj
+++ b/MadWorld/MadWorld.Tests/MadWorld.Tests.csproj
@@ -21,7 +21,7 @@
     <PackageReference Include="AutoFixture" Version="4.17.0" />
     <PackageReference Include="AutoFixture.AutoMoq" Version="4.17.0" />
     <PackageReference Include="AutoFixture.Xunit2" Version="4.17.0" />
-    <PackageReference Include="FluentAssertions" Version="6.3.0" />
+    <PackageReference Include="FluentAssertions" Version="6.4.0" />
     <PackageReference Include="Moq" Version="4.16.1" />
   </ItemGroup>
 
@@ -49,8 +49,8 @@
     <Folder Include="CustomPackages\Guardian\" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\MadWorld.Shared\MadWorld.Shared.Web.csproj" />
     <ProjectReference Include="..\MadWorld.Business\MadWorld.Business.csproj" />
     <ProjectReference Include="..\MadWorld.DataLayer\MadWorld.DataLayer.csproj" />
-    <ProjectReference Include="..\MadWorld.Shared\MadWorld.Shared.csproj" />
   </ItemGroup>
 </Project>
