--- a/MadWorld/MadWorld.Shared.Common/MadWorld.Shared.Common.csproj
+++ b/MadWorld/MadWorld.Shared.Common/MadWorld.Shared.Common.csproj
@@ -5,4 +5,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Remove="DesignPattern\" />
+    <None Remove="DesignPattern\Iterator\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="DesignPattern\" />
+    <Folder Include="DesignPattern\Iterator\" />
+  </ItemGroup>
 </Project>
